Fix image cropping sitewide

--- a/news/newsApp/static/css/styles.css
+++ b/news/newsApp/static/css/styles.css
@@ -215,9 +215,8 @@ footer p {
 }
 
 img {
-  object-fit: cover;
-  height: 100%;
-  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .card .badge {
